<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="._2_RouteStart" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/top_bar"
        android:gravity="center"
        android:text="@string/take_bus_title"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/take_bus_button_new_route"
            style="@style/ButtonStyleNavy"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:text="@string/take_bus_new_route" />

        <Button
            android:id="@+id/take_bus_button_saved_route"
            style="@style/ButtonStyleNavy"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_margin="2dp"
            android:text="@string/take_bus_saved_route" />
    </LinearLayout>

</LinearLayout>